# immich-shuttle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vitest.config.ts  vitest.setup.ts
.beads/: interactions.jsonl  metadata.json
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml  ci.yml  release.yml
docs/: rcv-preview-grid-scope.md
e2e/: scenarios.spec.ts
scripts/: download-sidecar.sh
src/: App.svelte  app.css  main.ts  tauri-plugin-dialog.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: albums.rs  devices.rs  history.rs  import.rs  mod.rs  preview.rs  profiles.rs  settings.rs  users.rs
src-tauri/src/models/: album.rs  device.rs  history.rs  job.rs  media.rs  mod.rs  profile.rs
src-tauri/src/services/: device_detector.rs  discovery.rs  immich_client.rs  keychain.rs  logs.rs  media_scanner.rs  mod.rs  profile_store.rs  sidecar_runner.rs  source_guard.rs  staging.rs  stdout_parser.rs  store.rs  thumbnailer.rs  url_resolver.rs  wipe.rs
src/lib/: api.ts  types.ts  users.test.ts  users.ts
src/lib/dev/: fixtures.ts  preview.ts  scenarios.ts  tauriMock.ts
src/lib/state/: albums.test.ts  albums.ts  auto-import.test.ts  auto-import.ts  device-rules.test.ts  device-rules.ts  errors.ts  history.ts  import-options.test.ts  import-options.ts  preview.ts  previewFilter.test.ts  previewFilter.ts  profiles.test.ts  (+12 more)
(+19 files in other folders)
